--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!doctype html>.   
 <html lang=en>
 <meta charset=UTF-8>
 <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name=viewport>
